<resources>
    <string name="app_name">Burguer</string>
    <string name="ver_menu">Ver menu</string>
    <string name="informacoes">Informações</string>
    <string name="bini_s">Bini\'s</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="preco">Preço</string>
    <string name="descricao">Descrição</string>
    <string name="salvar">Salvar</string>

    <string name="inserted_successfully">Produto inserido com sucesso!</string>
    <string name="inserted_error_to_insert">Erro ao inserir o produto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>