<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:padding="16dp"
    tools:context=".ui.MenuActivity">

    <EditText
        android:id="@+id/Edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/nome_do_produto"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/descricao"
        app:layout_constraintTop_toBottomOf="@+id/Edit_text_name" />

    <EditText
        android:id="@+id/Edit_text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/preco"
        app:layout_constraintTop_toBottomOf="@+id/Edit_text_description" />

    <Button
        android:id="@+id/Button_salve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/salvar"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/Edit_text_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>